--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -3,16 +3,6 @@ name: Update README
 on:
   push:
     branches: [ main ]
-    paths:
-      - 'solutions/**'
-      - 'python/**'
-      - 'readme-generator.py'
-  pull_request:
-    paths:
-      - 'solutions/**'
-      - 'python/**'
-      - 'readme-generator.py'
-  workflow_dispatch:
 
 permissions:
   contents: write
@@ -20,39 +10,21 @@ permissions:
 jobs:
   update-readme:
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
     
     steps:
-    - name: Checkout code
+    - name: Checkout repository
       uses: actions/checkout@v4
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Setup Python
+    - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: '3.10'
+        python-version: '3.x'
 
-    - name: Run README generator
-      run: |
-        python3 readme-generator.py
-        
-    - name: Check for changes
-      id: changes
-      run: |
-        if git status --porcelain | grep -q "README.md"; then
-          echo "changes=true" >> $GITHUB_OUTPUT
-          echo "Changes detected in README.md"
-        else
-          echo "changes=false" >> $GITHUB_OUTPUT
-          echo "No changes in README.md"
-        fi
+    - name: Generate README
+      run: python3 readme-generator.py
 
-    - name: Commit and push changes
-      if: steps.changes.outputs.changes == 'true'
-      run: |
-        git config --global user.name 'github-actions[bot]'
-        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        git add README.md
-        git commit -m "docs: auto-update README [skip ci]"
-        git push
+    - name: Auto-commit README changes
+      uses: stefanzweifel/git-auto-commit-action@v5
+      with:
+        commit_message: "docs: auto-update README.md"
+        file_pattern: README.md
