--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -9,6 +9,7 @@ permissions:
 
 jobs:
   update-readme:
+    if: "!contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.head_commit.message, '[no ci]')"
     runs-on: ubuntu-latest
     
     steps:
@@ -26,5 +27,5 @@ jobs:
     - name: Auto-commit README changes
       uses: stefanzweifel/git-auto-commit-action@v5
       with:
-        commit_message: "docs: auto-update README.md"
+        commit_message: "docs: auto-update README.md [skip ci]"
         file_pattern: README.md
